# desktop-environment-test

./: README.md  main.c  makefile  menubar.c  meson.build
include/: cursor.h  keyboard.h  menubar.h  output.h  seat.h  server.h  xdg_shell.h
protocols/: meson.build
src/: cursor.c  keyboard.c  main.c  meson.build  output.c  seat.c  server.c  xdg_shell.c
